# brainrot-news-reels

./: .gitignore  POSTGRESQL_SETUP.md  README.md  pyproject.toml
backend/: __init__.py  config.py  database.py  main.py  test_content_extraction.py  test_fetch_articles.py  test_pipeline.py  test_script.py  test_storage_service.py
backend/api/: __init__.py
backend/api/routes/: __init__.py  auth.py  generate.py  reels.py
backend/api/schemas/: __init__.py  reel.py  user.py
backend/models/: __init__.py  article.py  background_video.py  caption.py  reel.py  reel_watch.py  user.py
backend/services/: __init__.py  audio_generator.py  news_fetcher.py  script_generator.py  storage_service.py  video_compositor.py
backend/utils/: __init__.py  whisper_helper.py
frontend/: .gitignore  app.json  eslint.config.js  package-lock.json  package.json
frontend/app/: _layout.tsx  settings-detail.tsx
frontend/app/(auth)/: login.tsx  signup.tsx
frontend/app/(setup)/: index.tsx
frontend/app/(tabs)/: _layout.tsx  index.tsx  profile.tsx
frontend/components/: .reel-item.tsx.swp  caught-up-modal.tsx  reel-item.tsx  themed-text.tsx
frontend/components/ui/: icon-symbol.tsx
frontend/constants/: demo-reels.ts  reels.ts  settings.ts  theme.ts
frontend/context/: auth-context.tsx
frontend/hooks/: use-profile.ts  use-reel-feed.ts
frontend/utils/: api.ts  config.ts  feed.ts  local-watch-tracker.ts  video-manager.ts
scripts/: README.md  create_guest_user.py  setup_postgres_linux.sh  setup_postgres_macos.sh  setup_postgres_windows.bat  setup_postgres_windows.ps1
